--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -39,12 +39,12 @@
                          <!-- Swiper -->
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
-                    <div class="swiper-slide" ><img src="photos/corona.png"/></div>
-                    <div class="swiper-slide" ><img src="photos/corona.png"/></div>
-                    <div class="swiper-slide" ><img src="photos/corona.png"/></div>
-                    <div class="swiper-slide" ><img src="photos/corona.png"/></div>
-                    <div class="swiper-slide" ><img src="photos/corona.png"/></div>
-                    <div class="swiper-slide" ><img src="photos/corona.png"/></div>
+                    <div class="swiper-slide" ><img src="img/corona.png"/></div>
+                    <div class="swiper-slide" ><img src="img/corona.png"/></div>
+                    <div class="swiper-slide" ><img src="img/corona.png"/></div>
+                    <div class="swiper-slide" ><img src="img/corona.png"/></div>
+                    <div class="swiper-slide" ><img src="img/corona.png"/></div>
+                    <div class="swiper-slide" ><img src="img/corona.png"/></div>
                    
                     </div>
                 </div>
@@ -53,9 +53,9 @@
         </div>
 
         <ul class="mediabar">
-            <li><a href="#"><img src="photos/facebook.png"></a></li>
-            <li><a href="#"><img src="photos/twitter.png"></a></li>
-            <li><a href="#"><img src="photos/instagram.png"></a></li>
+            <li><a href="#"><img src="img/facebook.png"></a></li>
+            <li><a href="#"><img src="img/twitter.png"></a></li>
+            <li><a href="#"><img src="img/instagram.png"></a></li>
         </ul>
 
     </section>
