--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
         <div class="content">
             <div class="textBox">
-                <h2> HOPe DOPE</h2>
+                <h2> HOP <sup>e</sup> DOPE</h2>
                 <p>Home Brewery</p>
-                <p class="redlabel">page under construction 👨‍🔧</p>
+               <!--  <p class="redlabel">page under construction 👨‍🔧</p>--> 
               <!--  <p> Page under construction </p>--> 
                 <a href="#beers">Beers</a>
             </div>
