--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="./img/logomain.png"/>
                 </div>
                 <li><a href="#home" onclick="toggleMenu()" > Home</a></li>
-                <li><a href="#beers" onclick="toggleMenu()"> Beers</a></li>
+                <li><a href="./beers.html" onclick="toggleMenu()"> Beers</a></li>
                 <li><a href="#crew" onclick="toggleMenu()"> Crew</a></li>
                 <li><a href="#contact" onclick="toggleMenu()"> Contact</a></li>
                 
@@ -45,7 +45,7 @@
                 <p>Home Brewery</p>
                <!--  <p class="redlabel">page under construction 👨‍🔧</p>--> 
               <!--  <p> Page under construction </p>--> 
-                <a href="#beers">Beers</a>
+                <a href="./beers.html">Beers</a>
             </div>
 
             <div class="imgBox">
@@ -76,11 +76,7 @@
     </section>
 
 
-    <div class="beersBox" id="beers">
-        <img src="./img/logomain.png"/>
-        <p>piwo >> student</p>
-    </div>
-
+ 
         
 
     <div class="crewBox" id="crew">
