--- a/beers.html
+++ b/beers.html
@@ -16,7 +16,7 @@
 
 
     <div class="beer-gallery">
-        <a  class="back-button" href="./index.html">BACK TO HOME</a>
+        <a  class="back-button" href="./index.html">GO BACK HOME</a>
         <div class="card">
             <img src="./img/corona.png"/>
             <div class="textBox">
@@ -70,7 +70,7 @@
 
         </div>
 
-        <a  class="back-button" href="./index.html">BACK TO HOME</a>
+        <a  class="back-button" href="./index.html">GO BACK HOME</a>
     </div>
     
 </body>
