--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="content">
             <div class="textBox">
-                <h2> HOP <sup>e</sup> DOPE</h2>
+                <h2> HOP <sup style="color: white;">e</sup> DOPE</h2>
                 <p>Home Brewery</p>
                <!--  <p class="redlabel">page under construction 👨‍🔧</p>--> 
               <!--  <p> Page under construction </p>--> 
@@ -81,6 +81,7 @@
 
     <div class="crewBox" id="crew">
            <p>CREW</p>
+           <p>SOON...</p>
             <!-- beer animation-->
         <div id="container">
             <div class="glass">
@@ -95,6 +96,7 @@
 
     <div class="contactBox" id="contact">
         <p>CONTACT</p>
+        <p>SOON...</p>
         <!-- beer animation-->
         <div id="container">
             <div class="glass">
@@ -130,6 +132,9 @@
             el: '.swiper-pagination',
           },
           loop:true,
+          autoplay:{
+            delay:2300,
+          },
         });
 
 
