--- a/beers.html
+++ b/beers.html
@@ -11,9 +11,7 @@
     <title>HopeDope Homebrwery</title>
 </head>
 <body>
-   
-    
-
+ 
 
 
     <div class="beer-gallery">
@@ -70,7 +68,7 @@
 
         </div>
 
-        <a data-aos="fade-bottom"  class="back-button" href="./index.html">GO BACK HOME</a>
+        <a   class="back-button" href="./index.html">GO BACK HOME</a>
     </div>
 
 
