--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                          <!-- Swiper -->
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
-                    <div class="swiper-slide" ><img src="img/corona.png"/></div>
-                    <div class="swiper-slide" ><img src="img/corona.png"/></div>
-                    <div class="swiper-slide" ><img src="img/corona.png"/></div>
-                    <div class="swiper-slide" ><img src="img/corona.png"/></div>
-                    <div class="swiper-slide" ><img src="img/corona.png"/></div>
-                    <div class="swiper-slide" ><img src="img/corona.png"/></div>
+                    <div class="swiper-slide" ><img src="img/forest.png"/></div>
+                    <div class="swiper-slide" ><img src="img/forest.png"/></div>
+                    <div class="swiper-slide" ><img src="img/forest.png"/></div>
+                    <div class="swiper-slide" ><img src="img/forest.png"/></div>
+                    <div class="swiper-slide" ><img src="img/forest.png"/></div>
+                    <div class="swiper-slide" ><img src="img/forest.png"/></div>
                    
                     </div>
                 </div>
